--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ button:hover {
   @media screen and (min-width: 992px) {
     .gridcontainer {
         display:grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         gap: 20px;
         margin: 10px 40px;
     }
@@ -175,5 +175,12 @@ button:hover {
         height: 298px;
         top: 13%;
         left: 52%;
+    }
+
+    .gridcontainer {
+        display:grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 20px;
+        margin: 10px 40px;
     }
   }
